# yuiop60pi

./: .gitignore  CMakeLists.txt  Makefile  README.md  backlight.c  backlight.h  config.h  dynamic_keymap.c  dynamic_keymap.h  kbd.c  kbd.h  keycodes.h  keymap.c  keymap.h  layer.c  ledarray.c  ledarray.h  lighting.c  lighting.h  main.c  matrix.c  matrix.h  nvm.c  nvm.h  onboard_led.c  onboard_led.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  via.c  via.h  via.json  ws2812.pio
.github/workflows/: build.yml
diykb/: CMakeLists.txt  action.c  action.h  backlight.c  backlight.h  dynamic_keymap.h  kbd.c  kbd.h  keycode.c  keycodes.c  keycodes.h  keymap.h  layer.c  layer.h  layout.h  ledarray.c  ledarray.h  light.c  lighting.c  matrix.c  matrix.h  matrix_duplex.c  nvm.c  nvm.h  rgb.c  usb_descriptors.c  usb_descriptors.h  ws2812.pio.h
diykb/include/: backlight.h  kbd.h  keycodes.h  lighting.h  matrix.h  rgb.h  via.h
diykb/include/diykb/: action.h  backlight.h  kbd.h  keycode.h  keymap.h  layer.h  ledarray.h  light.h  lighting.h  matrix.h
include/: tusb_config.h
yuiop60pi/: CMakeLists.txt  config.h  keymap.c  layout.c  main.c  tusb_config.h
